--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to left, rgb(45, 50, 255), rgb(97, 198, 251));
 }
 
 code {
